; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/pm/extr_swtimer.c_process_cb_register_queue.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/pm/extr_swtimer.c_process_cb_register_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_4__*, i32, i8* }

@.str = private unnamed_addr constant [44 x i8] c"L== NULL, Lua not yet started! posting task\00", align 1
@cb_register_task_id = common dso_local global i32 0, align 4
@register_queue = common dso_local global %struct.TYPE_4__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @process_cb_register_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @process_cb_register_queue(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %7 = call i32 (...) @lua_getstate()
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %2
  %10 = call i32 @SWTMR_DBG(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %11 = load i32, i32* @cb_register_task_id, align 4
  %12 = call i32 @task_post_low(i32 %11, i32 0)
  br label %33

13:                                               ; preds = %2
  br label %14

14:                                               ; preds = %17, %13
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** @register_queue, align 8
  %16 = icmp ne %struct.TYPE_4__* %15, null
  br i1 %16, label %17, label %32

17:                                               ; preds = %14
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** @register_queue, align 8
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %5, align 8
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 2
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %6, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @swtmr_cb_register(i8* %22, i32 %25)
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** @register_queue, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %28, align 8
  store %struct.TYPE_4__* %29, %struct.TYPE_4__** @register_queue, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %31 = call i32 @free(%struct.TYPE_4__* %30)
  br label %14

32:                                               ; preds = %14
  br label %33

33:                                               ; preds = %32, %9
  ret void
}

declare dso_local i32 @lua_getstate(...) #1

declare dso_local i32 @SWTMR_DBG(i8*) #1

declare dso_local i32 @task_post_low(i32, i32) #1

declare dso_local i32 @swtmr_cb_register(i8*, i32) #1

declare dso_local i32 @free(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
